interview and internship tweaked